--- a/app/app.css
+++ b/app/app.css
@@ -23,3 +23,13 @@
   content: "|";
   padding-right: 0.3em;
 }
+
+.footer1 {
+    background: grey;
+	padding-top: 10px;
+	padding-right: 0;
+	padding-bottom: 10px;
+	padding-left: 0;
+	color: white;
+	text-align: center;
+}
